; ModuleID = '/home/carl/AnghaBench/sway/swaybar/tray/extr_tray.c_cmp_output.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/tray/extr_tray.c_cmp_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar_output = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_output(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.swaybar_output*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.swaybar_output*
  store %struct.swaybar_output* %8, %struct.swaybar_output** %6, align 8
  %9 = load %struct.swaybar_output*, %struct.swaybar_output** %6, align 8
  %10 = getelementptr inbounds %struct.swaybar_output, %struct.swaybar_output* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load %struct.swaybar_output*, %struct.swaybar_output** %6, align 8
  %16 = getelementptr inbounds %struct.swaybar_output, %struct.swaybar_output* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @strcmp(i8* %14, i64 %17)
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %27

21:                                               ; preds = %13, %2
  %22 = load i8*, i8** %4, align 8
  %23 = load %struct.swaybar_output*, %struct.swaybar_output** %6, align 8
  %24 = getelementptr inbounds %struct.swaybar_output, %struct.swaybar_output* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @strcmp(i8* %22, i64 %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %21, %20
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @strcmp(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
